--- a/public/user_css/part_catalog.css
+++ b/public/user_css/part_catalog.css
@@ -32,6 +32,12 @@
     height:80%;
 }
 
+.image-pic {
+    width:100%;
+    height:95%;
+    object-fit: cover;
+}
+
 .product__info {
     height:16%;
     font-size: 1.3rem;
