--- a/views/admin_layuots/add_product.ejs
+++ b/views/admin_layuots/add_product.ejs
@@ -43,9 +43,30 @@
                 <option value="<%= brand.slug %>"><%= brand.title %> </option>
             <% }) %>
         </select>
-        <!-- <input type="file" name="img">
-        <img src="#" alt="Картинка" id="imgPreview"> -->
+        <input type="file" name="image" id="img">
+        <img src="#" alt="Картинка" id="imgPreview">
+
         <button>Submit</button>    
     </form>
+    <script src="/js/jquery.js"></script>
+    <script>
+    
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                
+                reader.onload = function(e) {
+                    $("#imgPreview").attr('src', e.target.result).width(100).height(100);
+                }
+                
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+        
+        $("#img").change(function() {
+            readURL(this);
+        });
+        
+    </script>
 </body>
 </html>
