--- a/views/user_layuots/part_catalog.ejs
+++ b/views/user_layuots/part_catalog.ejs
@@ -6,7 +6,7 @@
             <div class="catalog__products">
                 <% products.forEach(product => { %>
                     <a href="/catalog/" class="product__link">
-                        <div class="product__image"><img style="width:100%; height:95%" src="../public/img/photos/sex__women.jpeg" alt="name"></div>
+                        <div class="product__image"><img class="image-pic" src="/product_images/<%= product._id %>/<%= product.image %>" alt="name"></div>
                         <div class="product__info">
                             <div class="product__info-name">
                                 <%= product.brand + ' ' + product.title %> 
