--- a/views/admin_layuots/add_product.ejs
+++ b/views/admin_layuots/add_product.ejs
@@ -12,7 +12,7 @@
         <input type="text" name="title" value="<%= title %>" placeholder="Title" required>
         <br><br>
         <label for="">description</label>
-        <textarea name="description" id="" cols="30" rows="10" placeholder="Description" required><%= description %></textarea>
+        <textarea resize="none" name="description" id="" cols="30" rows="10" placeholder="Description" required><%= description %></textarea>
         <br><br>
         <label for="">Article</label>
         <input type="text" name="article" value="<%= article %>" placeholder="Article" required>
