--- a/views/admin_layuots/header.ejs
+++ b/views/admin_layuots/header.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/admin_css/header_style.css">
     <link rel="stylesheet" href="/admin_css/footer_style.css">
     <link rel="stylesheet" href="/admin_css/body_style.css">
+    <link rel="shortcut icon" href="/img/icons/p.png" type="image/png">
 </head>
 <body>
     <div class="container">
