--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/user_css/header.css">
     <link rel="stylesheet" href="/user_css/footer.css">
     <link rel="stylesheet" href="/user_css/start_page.css">
+    <link rel="shortcut icon" href="/img/icons/p.png" type="image/png">
     <title>Pragma</title>
 </head>
 <body>
