--- a/views/user_layuots/header.ejs
+++ b/views/user_layuots/header.ejs
@@ -25,11 +25,9 @@
                 <div class="container__navbar">
                     <ul class="navbar__list">
                         <li class="list-item"><a href="/catalog" class="item-link">Вся обувь</a></li>
-                        <li class="list-item"><a href="#" class="item-link">Мужское</a></li>
-                        <li class="list-item"><a href="#" class="item-link">Женское</a></li>
-                        <li class="list-item"><a href="#" class="item-link">Детское</a></li>
+                        <li class="list-item"><a href="/catalog/men" class="item-link">Мужское</a></li>
+                        <li class="list-item"><a href="/catalog/women" class="item-link">Женское</a></li>
                         <li class="list-item"><a href="#" class="item-link">Аксессуары</a></li>
-                        <li class="list-item"><a href="#" class="item-link">Рюкзаки</a></li>
                     </ul>
                 </div>
                 <div class="container__IUser">
