--- a/views/admin_layuots/products.ejs
+++ b/views/admin_layuots/products.ejs
@@ -19,13 +19,12 @@
                 <th>Category</th>
                 <th>Stock</th>
                 <th>Article</th>
-                <th>Product Image</th>
                 <th>Edit</th>
                 <th>Delete</th>
             </tr>
         </thead>
         <tbody>
-            <% products.forEach(  function(product) { %>
+            <% products.forEach( (product) => { %>
             <tr>
                 <td><%= product.title %></td>
                 <td><%= product.brand %></td>
