--- a/views/delivery.ejs
+++ b/views/delivery.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/user_css/header.css">
     <link rel="stylesheet" href="/user_css/footer.css">
     <link rel="stylesheet" href="/user_css/part_delivery.css">
+    <link rel="shortcut icon" href="/img/icons/p.png" type="image/png">
     <title>Доставка</title>
 </head>
 <body>
