--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/user_css/header.css">
     <link rel="stylesheet" href="/user_css/footer.css">
     <link rel="stylesheet" href="/user_css/part_payment.css">
+    <link rel="shortcut icon" href="/img/icons/p.png" type="image/png">
     <title>Оплата</title>
 </head>
 <body>
