--- a/views/admin_layuots/edit_brand.ejs
+++ b/views/admin_layuots/edit_brand.ejs
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit-brand</title>
+    <link rel="shortcut icon" href="/img/icons/p.png" type="image/png">
+    <link rel="stylesheet" href="/admin_css/add_catbrand.css">
 </head>
 <body>
-    <a href="/admin/brands">Вернуться к категориям</a>
+    <a href="/admin/brands">Вернуться к брендам</a>
     <form method="post" action="/admin/brands/edit-brand/<%= id %>">
-        <label for="">Title</label>
-        <input type="text" name="title" value="<%= title %>" placeholder="New title" required>
+        <label for="">Бренд</label>
+        <input type="text" name="title" value="<%= title %>" placeholder="Новое название" required>
         <br><br>
-        <button>Submit</button>    
+        <button>Изменить</button>    
     </form>
 </body>
 </html>
