--- a/views/user_layuots/start_page.ejs
+++ b/views/user_layuots/start_page.ejs
@@ -35,7 +35,7 @@
                     </div>
                 </a>
                 <div class="main__banner">
-                    <div class="banner__blocks">
+                    <div class="banner__blocks__second">
                         <!-- изменить класс ссылок и добавить картинки -->
                         <a href="#" class="blocks-item men__link">
                             <div class="blocks-text">Мужское</div>
