--- a/public/user_css/part_catalog.css
+++ b/public/user_css/part_catalog.css
@@ -21,10 +21,12 @@
     color: #000;
     text-decoration: none;
     background-color: #f2f2f2;
+    transition: .4s;
 }
 
 .product__link:hover {
-    box-shadow: 0 0 2px 2px #f2f2f2;
+    transition: .4s;
+    box-shadow: 3px 3px #f7753e;
 }
 
 .product__image {
