--- a/public/user_css/start_page.css
+++ b/public/user_css/start_page.css
@@ -85,6 +85,14 @@
     align-items: flex-end;
 }
 
+.banner__blocks__second {
+    width:35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
 .blocks-item{
     width:80%;
     height:45%;
