--- a/views/user_layuots/mencatalog.ejs
+++ b/views/user_layuots/mencatalog.ejs
@@ -18,7 +18,7 @@
             </div>
             <div class="catalog__products">
                 <% products.forEach(product => { %>
-                    <% if (product.sex == "men") { %>
+                    <% if (product.sex == "мужские") { %>
                         <a href="/catalog/<%= product.article %>" class="product__link">
                             <div class="product__image"><img class="image-pic" src="/product_images/<%= product._id %>/<%= product.image %>" alt="Обувь"></div>
                             <div class="product__info">
