--- a/views/user_layuots/part_catalog.ejs
+++ b/views/user_layuots/part_catalog.ejs
@@ -5,7 +5,7 @@
             </div>
             <div class="catalog__products">
                 <% products.forEach(product => { %>
-                    <a href="/catalog/<%= product.article %>" class="product__link">
+                    <a href="/catalog/product/<%= product._id %>" class="product__link">
                         <div class="product__image"><img class="image-pic" src="/product_images/<%= product._id %>/<%= product.image %>" alt="name"></div>
                         <div class="product__info">
                             <div class="product__info-name">
