--- a/views/user_layuots/brand.ejs
+++ b/views/user_layuots/brand.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Women</title>
-    <link rel="stylesheet" href="/user_css/">    <link rel="stylesheet" href="/user_css/header.css">
+    <title>Men</title>   
+    <link rel="stylesheet" href="/user_css/header.css">
     <link rel="stylesheet" href="/user_css/footer.css">
     <link rel="stylesheet" href="/user_css/part_catalog.css">
     <link rel="shortcut icon" href="/img/icons/p.png" type="image/png">
@@ -18,15 +18,15 @@
             </div>
             <div class="catalog__products">
                 <% products.forEach(product => { %>
-                    <% if (product.sex == "женские") { %>
+                    <% if (product.brand == cond) { %>
                         <a href="/catalog/product/<%= product._id %>" class="product__link">
                             <div class="product__image"><img class="image-pic" src="/product_images/<%= product._id %>/<%= product.image %>" alt="Обувь"></div>
                             <div class="product__info">
-                                <div class="product__info-name">
-                                    <%= product.brand + ' ' + product.title %> 
-                                </div>
-                                <div class="product__info-price">
-                                    <%= product.price %>$
+                            <div class="product__info-name">
+                                <%= product.brand + ' ' + product.title %> 
+                            </div>
+                            <div class="product__info-price">
+                                <%= product.price %>$
                                 </div>
                             </div>
                         </a>
