--- a/public/admin_css/add_catbrand.css
+++ b/public/admin_css/add_catbrand.css
@@ -42,7 +42,7 @@ button {
 
 button:hover{
     transition: .4s;
-    border-radius: 50%;
+    border-radius: 15px;
     border: 1px solid #f7753e;
     cursor: pointer;
 }
