--- a/views/admin_layuots/products.ejs
+++ b/views/admin_layuots/products.ejs
@@ -11,7 +11,6 @@
             <tr>
                 <th>Product</th>
                 <th>Brand</th>
-                <th>Sizes</th>
                 <th>Season</th>
                 <th>Men/Women</th>
                 <th>Price</th>
@@ -27,7 +26,6 @@
             <tr>
                 <td><%= product.title %></td>
                 <td><%= product.brand %></td>
-                <!-- <td><%= product.sizes %></td> -->
                 <td><%= product.season %></td>
                 <td><%= product.sex %></td>
                 <td><%= product.price %></td>
@@ -36,9 +34,9 @@
                 <td><%= product.article %></td>
                 <td>
                     <%  if(product.image == "") { %>
-                        <img src="/img/photos/products/noimage.png" alt="">
+                        <img src="/product_images/noimage.png" alt="">
                     <% } else { %>
-                        <img src="img/photos/products/<%= product._id %>/<%= product.image %>" alt="">
+                        <img src="/product_images/<%= product._id %>/<%= product.image %>" alt="" width="100px" height="100px" object-fit="cover">
                     <% } %>
                 </td>
                 <td><a href="/admin/products/edit-product/<%= product._id %>">Edit</a></td>
