--- a/views/product.ejs
+++ b/views/product.ejs
@@ -17,6 +17,13 @@
                 <div class="gallery-item">
                     <img src="/product_images/<%= id %>/<%= image %>" style="width:100%" alt="<%= title %>">
                 </div>
+                <% galleryImages.forEach( imageGall => { %>
+                    <% if (imageGall != "thumbs") { %>
+                        <div class="gallery-item">
+                            <img src="/product_images/<%= id %>/gallery/<%= imageGall %>" style="width:100%" alt="<%= title %>">
+                        </div>
+                    <% } %>
+                <% }) %>
                 
                 <a class="prev" onclick="addSlide(-1)">&#10094</a>
                 <a class="next" onclick="addSlide(1)">&#10095</a>
