--- a/views/user_layuots/header.ejs
+++ b/views/user_layuots/header.ejs
@@ -34,9 +34,9 @@
                     <div class="IUser__cart">
                         <a class="IUser__link" href="#"><img class="interface-icon" src="/img/icons/shopping-cart.svg" alt="Корзина"></a>
                     </div>
-                    <div class="IUser__auth ">
+                    <a href="/users/register" class="IUser__auth">
                         <img class="interface-icon" src="/img/icons/user.svg" alt="Авторизация">
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
