--- a/public/user_css/part_product.css
+++ b/public/user_css/part_product.css
@@ -137,6 +137,8 @@ main {
     font-weight: 700;
 }
 
+/* BUTTON STYLES */
+
 .product__addtocart{
     width:100%;
     height:3rem;
@@ -154,7 +156,21 @@ main {
     transition: .4s;
 }
 
+.product__addtocart__locked{
+    width:100%;
+    padding:1rem;
+    font-size:16px;
+    text-align: center;
+    color: #f2f2f2;
+    background-color: gray;
+    border:none;
+    cursor: not-allowed;
+}
 
+.product__addtocart__locked:hover{
+    color:#fff;
+    cursor: not-allowed;
+}
 
 
 @media(max-width:1300px){
@@ -238,4 +254,67 @@ main {
         border-radius: 3px 0 0 3px;
     }
 
+}
+
+@media(max-width:576px) {
+
+    .prev, .next {
+        font-size: 22px;
+    }
+
+    /* INFOBAR STYLES */
+
+    .product__infobar{
+        width:80%;
+    }
+
+    /* FIRST INFO BLOCK */
+
+    .product__name{
+        font-size: 22px;
+    }
+
+    .product__brand {
+        font-size: 21px;
+    }
+
+    .product__category__sex{
+        font-size: 15px;
+    }
+
+    .product__article {
+        font-size: 18px;
+    }
+
+    .article__bold{
+        font-size: 18px;
+    }
+
+    /* SECOND INFO BLOCK */
+    .product__price{
+        font-size: 20px;
+    }
+
+    .product__price__sale{
+        font-size: 17px;
+    }
+
+    .product__delivery{
+        font-size: 15px;
+    }
+
+    .product__stock{
+        font-size: 18px;
+        font-weight: 700;
+    }
+
+    /* BUTTON STYLES */
+
+    .product__addtocart{
+        font-size:18px;
+    }
+
+    .product__addtocart__locked{
+        font-size:18px;
+    }
 }
